noinst_LTLIBRARIES = libfitzdraw.la

INCLUDES =	\
	-I$(top_srcdir)/fitz	\
	-I$(top_srcdir)/mupdf

libfitzdraw_la_SOURCES =	\
	glyphcache.c	\
	pixmap.c	\
	porterduff.c	\
	meshdraw.c	\
	imagedraw.c	\
	imagedraw_lazy.c	\
	imageunpack.c	\
	imagescale.c	\
	pathscan.c	\
	pathfill.c	\
	pathstroke.c	\
	render.c	\
	blendmodes.c
