all: cmap_japanese.c

cmap_japanese.c: 83pv-RKSJ-H 90ms-RKSJ-H 90ms-RKSJ-UCS2 90ms-RKSJ-V 90msp-RKSJ-H 90msp-RKSJ-V 90pv-RKSJ-H 90pv-RKSJ-UCS2 90pv-RKSJ-UCS2C Add-RKSJ-H Add-RKSJ-V Adobe-Japan1-4 Adobe-Japan1-UCS2 EUC-H EUC-V Ext-RKSJ-H Ext-RKSJ-V H UniJIS-UCS2-H UniJIS-UCS2-HW-H UniJIS-UCS2-HW-V UniJIS-UCS2-V V
	cmapdump $@ $+

